--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "example-create-react-app-express",
+  "name": "react-express-boilerplate",
+  "description": "Boilerplate for an react+express app, tailored to my needs",
   "version": "1.0.0",
+  "author": {
+    "name": "Hossein Dehnokhalaji",
+    "email": "hossein.dehnavi98@yahoo.com",
+    "url": "https://www.linkedin.com/in/iamhosseindhv/"
+  },
+  "license": "MIT",
   "scripts": {
     "app": "cd app && npm start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run app\""
-
   },
   "dependencies": {
     "express": "^4.16.2"
@@ -13,4 +19,17 @@
   "devDependencies": {
     "concurrently": "^3.5.0"
   }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/iamhosseindhv/React-Express-boilerplate.git"
+  },
+  "keywords": [
+    "node",
+    "nodejs",
+    "npm",
+    "express",
+    "create-react-app",
+    "boilerplate",
+    "react"
+  ]
 }
