--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.16.2"
   },
   "devDependencies": {
-    "concurrently": "^3.5.0"
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.17.3"
   },
   "repository": {
     "type": "git",
